# web_comments

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docker/: docker-compose.yml
docker/django/: Dockerfile  healthcheck.sh
docker/nginx/: Dockerfile  default.conf
docker/postgres/: Dockerfile  healthcheck.sh
environments/: template.env
src/accounts/: admin.py  managers.py  models.py  router.py  serializers.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_models.py  test_serializers.py
src/accounts/tests/test_viewsets/: test_user_views.py
src/comments/: admin.py  consumers.py  filters.py  forms.py  models.py  paginators.py  permissions.py  router.py  serializers.py  services.py  validators.py  views.py
src/comments/migrations/: 0001_initial.py  0002_alter_comment_text.py
src/comments/tests/: conftest.py  test_validators.py
src/core/: asgi.py  urls.py
src/core/settings/: __init__.py  base.py  database.py  drf-spectacular.py  environments.py  rest_framework.py  templates_and_static.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: base.html  home.html
src/templates/components/: navbar.html  paginator.html  table.html
src/templates/components/comment/: base_form.html  (+2 more)
src/tests/: conftest.py
src/tests/accounts/: conftest.py  test_managers.py  test_serializers.py
src/tests/comments/: conftest.py  test_models.py  test_permissions.py  test_validators.py
src/tests/selenium/: conftest.py  test_comment.py  test_comment_table.py  test_user_auth.py  tools.py
(+12 files in other folders)
